--- a/プログラム/GameProgramming/GameProgramming.vcxproj.filters
+++ b/プログラム/GameProgramming/GameProgramming.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="CUtil.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="CFriendly.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Update.h">
@@ -192,6 +195,9 @@
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="CUtil.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="CFriendly.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
