--- a/プログラム/GameProgramming/GameProgramming.vcxproj
+++ b/プログラム/GameProgramming/GameProgramming.vcxproj
@@ -86,6 +86,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CBillBoard.cpp" />
+    <ClCompile Include="CBlock.cpp" />
     <ClCompile Include="CBullet.cpp" />
     <ClCompile Include="CCamera.cpp" />
     <ClCompile Include="CCharacter.cpp" />
@@ -118,6 +119,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CBillBoard.h" />
+    <ClInclude Include="CBlock.h" />
     <ClInclude Include="CBullet.h" />
     <ClInclude Include="CCamera.h" />
     <ClInclude Include="CCharacter.h" />
